# ryswick-engine

./: .gitignore  CMakeLists.txt  README.md  go.ps1
src/: main.cpp
src/object/: binread.cpp  binread.h  gameobject.cpp  gameobject.h
src/render/: indexbuffer.cpp  indexbuffer.h  render.cpp  render.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
src/shaders/: fragment.glsl  textv.glsl  vertex.glsl
tooling/: gen_indice_bin.py  gen_vertice_bin.py
